--- a/_includes/mascot.html
+++ b/_includes/mascot.html
@@ -82,21 +82,23 @@
       </p>
     </div>
 
-    <div class="ImgDiv" style="display: flex">
+    <div class="ImgDiv" style="display: flex; justify-content: space-around;background-color: white;">
       <!-- Corrected: Combined into a single 'div' with 'display: flex' -->
       <img
-        src="../assets/images/meshery-dark-text.webp"
+        src="../assets/images/five-juggling.png"
         alt="MesheryOperatorDark Logo"
         height="270"
         width="270"
       />
       <img
-        src="../assets/images/meshery-logo-light-text.webp"
+        src="../assets/images/five-skating.png"
         alt="MesheryOperator Logo"
         height="270"
         width="270"
+        style="background-color: white;"
       />
 
     </div>
+    <button class="button1">Download Five Library</button>
   </div>
 </div>
