Almost completed responsiveness

--- a/_includes/mascot.html
+++ b/_includes/mascot.html
@@ -99,6 +99,6 @@
       />
 
     </div>
-    <button class="button1">Download Five Library</button>
+    <button class="button1"><i class="fa fa-cloud-download" style="font-size:24px"></i>Download Five Library</button>
   </div>
 </div>
