--- a/_includes/meshery-brand.html
+++ b/_includes/meshery-brand.html
@@ -17,7 +17,10 @@
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css"
 />
-
+<link
+  rel="stylesheet"
+  href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
+/>
 <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css"
@@ -198,6 +201,8 @@
       />
       <!-- 'max-width: 100%' ensures the image is responsive and 'height: auto' maintains the aspect ratio -->
     </div>
+
+    <button class="button1"><i class="fa fa-cloud-download" style="font-size:24px"></i>Download Meshery Assets</button>
     
   </div>
 </div>
