--- a/_includes/meshmap.html
+++ b/_includes/meshmap.html
@@ -186,7 +186,7 @@
         <div class="color-code">#00D3A9</div>
       </div>
     </div>
-    <button class="button1"><i class="fa fa-cloud-download" style="font-size:24px"></i>Download Meshery Kit</button>
+    <button class="button1"><i class="fa fa-cloud-download" style="font-size:24px"></i>Download Meshery Assets</button>
     
   </div>
 </div>
